[package]
name = "amd"
version = "1.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.88"
chrono = "0.4.41"
chrono-tz = "0.10.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
dotenv = "0.15.0"
serenity = { version = "0.12.4", features = ["chrono"] }
poise = "0.6.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
